# lachesis

./: .env.tmpl  .gitignore  .pre-commit-config.yaml  .pre-commoit-config.yaml  LICENSE.txt  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
Lachesis/: admin.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
redirections/: admin.py  apps.py  models.py  urls.py  views.py
redirections/migrations/: 0001_initial.py  0002_remove_redirection_key_redirection_slug_and_more.py  0003_redirection_redirection_type.py  0004_auto_20231001_1434.py  0005_remove_redirection_redirection_code.py  0006_alter_redirection_redirection_type.py  0007_redirection_status_new.py  0008_auto_20231001_1457.py  0009_remove_redirection_status_new_and_more.py  0010_redirection_staged_redirect.py
redirections/urls/: main.py  manage.py
redirections/views/: main.py  manage.py
static/css/: app.css  manage.css
static/js/: jquery-3.7.1.min.js  manage.js
templates/: base.html
templates/account/: login.html
templates/admin/: index.html
templates/manage/: base.html  index.html  navbar.html  redirection_form.html  redirection_list.html
templates/redirections/: index.html  staged.html
user/: admin.py  models.py
user/migrations/: 0001_initial.py
